# moq2ts

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: MacOSXBundleInfo.plist.in
docker/: Dockerfile.debian-bookworm
docs/: DEVELOPER.md  draft-gregoire-moq-msfts-00.txt  sequence-diagrams.md
docs/superpowers/plans/: 2026-05-31-camera-mjpeg-framerate.md  2026-05-31-exact-rap-group-boundaries.md  2026-05-31-keyframe-aligned-groups.md  2026-05-31-keyframe-flagged-group-boundaries.md  2026-05-31-keyframe-interval-and-rap-diagnostic.md  2026-05-31-live-vs-vod-catalog.md  2026-05-31-stop-hang-cancellation.md  2026-06-01-egress-pacing-av-timeline.md  2026-06-01-preview-mjpeg-consistency.md
docs/superpowers/specs/: 2026-05-31-camera-mjpeg-framerate-design.md  2026-05-31-exact-rap-group-boundaries-design.md  2026-05-31-keyframe-aligned-groups-design.md  2026-05-31-keyframe-flagged-group-boundaries-design.md  2026-05-31-keyframe-interval-and-rap-diagnostic-design.md  2026-05-31-live-vs-vod-catalog-design.md  2026-05-31-stop-hang-cancellation-design.md  2026-06-01-egress-pacing-av-timeline-design.md  2026-06-01-preview-mjpeg-consistency-design.md
scripts/: build-debian-bookworm.sh  bundle-bookworm-runtime.sh
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h  PreviewPanel.cpp  PreviewPanel.h  PublishConfig.h
src/media/: EgressPacing.h  LibavCaptureSource.cpp  LibavCaptureSource.h  LibavPreviewWorker.cpp  LibavPreviewWorker.h  LivePipeline.cpp  LivePipeline.h  M2tsPacketizer.cpp  M2tsPacketizer.h  MacAvCapture.h  MacAvCapture.mm  MacCaptureEnumerator.mm  MsftsMuxer.cpp  MsftsMuxer.h  V4l2Capabilities.cpp  V4l2Capabilities.h
src/publish/: MoqxrPublisher.cpp  MoqxrPublisher.h
tests/: build-debian-bookworm-script.sh  catalog-before-media-guards.sh  keyframe-aligned-groups-guards.sh  libav-capture-source-guards.sh  live-vod-catalog-guards.sh  moq-publisher-mode-guards.sh  pace_delay_test.cpp  preferences-guards.sh  preview-panel-guards.sh  publisher-stats-tab-guards.sh  stop-real-publisher-guards.sh  stop-shutdown-guards.sh  transport-close-wake-guards.sh  v4l2-capability-probe-guards.sh  v4l2_selection_test.cpp
